--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,10 @@ version = 0.1
 author = Roman Salin
 author-email = rsalin@mirantis.com
 classifiers =
+    Development Status :: 1 - Planning
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
@@ -14,3 +18,10 @@ classifiers =
 [files]
 packages =
     lp_jira_sync
+data_files =
+    etc =
+        etc/lp_jira_sync.conf.sample
+
+[entry_points]
+console_scripts =
+    lp-jira-sync = lp_jira_sync.cli:cli
