--- a/etc/lp_jira_sync.conf.sample
+++ b/etc/lp_jira_sync.conf.sample
@@ -1,5 +1,13 @@
-[DEFAULT]
-
 [DB]
 host = localhost
 port = 27017
+
+[JIRA]
+url = https://mirantis.jira.com/
+user = user
+password = password
+project_key = QA
+
+[LP]
+projects = ["fuel", "mos"]
+milestones = ["7.0", "8.0"]
