--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,6 @@
 name = lp-jira-sync
 summary = JIRA-Launchpad Sync project
 description-file = README.rst
-version = 0.1
 author = Roman Salin
 author-email = rsalin@mirantis.com
 classifiers =
@@ -18,10 +17,7 @@ classifiers =
 [files]
 packages =
     lp_jira_sync
-data_files =
-    etc =
-        etc/lp_jira_sync.conf.sample
 
 [entry_points]
 console_scripts =
-    lp-jira-sync = lp_jira_sync.cli:cli
+    lp-jira-sync = lp_jira_sync.sync:main
