--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ skipsdist = True
 envlist = py27,pep8
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements-pip.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
 setenv = VIRTUAL_ENV={envdir}
-commands = nosetests -sv lp_jira_sync/tests
+commands = nosetests -sv tests
 
 [testenv:pep8]
 commands = flake8
@@ -21,10 +21,7 @@ commands = {posargs}
 show-source = True
 ignore =
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,shared
 
 [hacking]
 import_exceptions =
-    collections.defaultdict,
-    collections.OrderedDict,
-    StringIO.StringIO
