--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lp-jira-sync
-summary = JIRA-Launchpad Sync project
+summary = Launchpad-JIRA Sync
 description-file = README.rst
 author = Roman Salin
 author-email = rsalin@mirantis.com
