--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skipsdist = True
 envlist = py27,pep8
 
 [testenv]
-deps = -r{toxinidir}/requirements-pip.txt
+deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
@@ -20,7 +20,6 @@ commands = {posargs}
 [flake8]
 show-source = True
 ignore =
-builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,shared
 
 [hacking]
