--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands = {posargs}
 
 [flake8]
 show-source = True
-ignore =
+ignore = H236
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,shared
 
 [hacking]
